# math-modeling-paper-generator

./: .gitignore  CLAUDE.md  README.md  SECURITY.md  START_HERE.md  environment-lite.yml  pyproject.toml  requirements-lite.txt
docs/: README.md  architecture.md  artifact-ledger-template.md  calibration-log-template.md  calibration-run-index.md  community-signal-to-rule-pipeline.md  concept-figure-helper.md  continuation-state.md  current-state-matrix-2026-07-07.md  environment-setup.md  family-section-budget-examples.md  family-writing-style-examples.md  figure-plan-template.md  first-calibration-batch-plan.md  knowledge-coverage-audit-v1.6.md  literature-notes-template.md  local-experience-extraction-queue.md  local-experience-extraction-status.md  long-term-roadmap.md  methodology-checklist-template.md  objective-coverage-matrix.md  online-consensus-check-protocol.md  online-consensus-example-template.md  online-consensus-weak-strong-examples.md  playwright-mcp-public-research.md  pressure-test-runbook.md  problem-profile-template.md  project-audit-2026-07-06.md  research-agenda.md  review-checklist.md  route-decision-template.md  run-artifact-index.md  run-start-checklist.md  section-budget-template.md  title-candidates-template.md  v1-runbook.md  v1.2-definition.md  v1.2-draft-contract.md  v1.2-final-pass-guide.md  v1.2-quickstart.md  (+33 more)
inventory/: README.md  source-absorption-matrix.md  source-map.md
knowledge/: README.md  full-stack-execution-map.md  learning-status.md  master-map.md  roadmap.md  worklog.md
memory/: v15-paper-generation-feedback.md
(+421 files in other folders)
