[project]
name = "math-modeling-paper-generator"
version = "0.1.0"
description = "A Claude Code oriented workflow for reproducible math-modeling paper research drafts."
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.8",
    "networkx>=3.2",
    "numpy>=1.26",
    "pandas>=2.2",
    "pillow>=10.3",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "scikit-learn>=1.4",
    "scipy>=1.12",
    "statsmodels>=0.14",
]

[tool.ruff]
line-length = 100
